--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: clojure
+sudo: false
 branches:
   only:
     - master
@@ -6,7 +7,7 @@ before_install:
   - curl --silent https://shunit2.googlecode.com/files/shunit2-2.1.6.tgz | tar xz -C /tmp/
   - git clone https://github.com/ryanbrainard/heroku-buildpack-testrunner.git /tmp/testrunner
 install: true
-script: /tmp/testrunner/bin/run -c .
+script: /tmp/testrunner/bin/run .
 env:
   global:
     - SHUNIT_HOME="/tmp/shunit2-2.1.6"
