--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ branches:
     - master
 before_install:
   - curl --silent https://shunit2.googlecode.com/files/shunit2-2.1.6.tgz | tar xz -C /tmp/
-  - git clone https://github.com/ryanbrainard/heroku-buildpack-testrunner.git /tmp/testrunner
+  - git clone https://github.com/heroku/heroku-buildpack-testrunner.git /tmp/testrunner
 install: true
-script: /tmp/testrunner/bin/run .
+script: /tmp/testrunner/bin/run -c .
 env:
   global:
     - SHUNIT_HOME="/tmp/shunit2-2.1.6"
