--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ before_install:
 - curl --silent https://shunit2.googlecode.com/files/shunit2-2.1.6.tgz | tar xz -C
   /tmp/
 - git clone https://github.com/heroku/heroku-buildpack-testrunner.git /tmp/testrunner
-- "./etc/hatchet_travis_setup.sh"
 install: true
 script: eval "$TEST_CMD"
 after_script: heroku keys:remove $USER@`hostname`
@@ -22,3 +21,9 @@ env:
   matrix:
   - TEST_CMD="/tmp/testrunner/bin/run -c ."
   - TEST_CMD="sh hatchet.sh"
+addons:
+  apt:
+    sources:
+      - heroku
+    packages:
+      - heroku-toolbelt
