--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: clojure
-sudo: false
+sudo: true
 branches:
   only:
   - master
@@ -7,6 +7,7 @@ before_install:
 - curl --silent https://shunit2.googlecode.com/files/shunit2-2.1.6.tgz | tar xz -C
   /tmp/
 - git clone https://github.com/heroku/heroku-buildpack-testrunner.git /tmp/testrunner
+- "./etc/hatchet_travis_setup.sh"
 install: true
 script: eval "$TEST_CMD"
 after_script: heroku keys:remove $USER@`hostname`
@@ -21,9 +22,3 @@ env:
   matrix:
   - TEST_CMD="/tmp/testrunner/bin/run -c ."
   - TEST_CMD="sh hatchet.sh"
-addons:
-  apt:
-    sources:
-      - heroku
-    packages:
-      - heroku-toolbelt
