--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,7 @@ sudo: true
 branches:
   only:
   - master
-before_install:
-- curl --silent https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/shunit2/shunit2-2.1.6.tgz | tar xz -C /tmp/
-- git clone https://github.com/heroku/heroku-buildpack-testrunner.git /tmp/testrunner
-- "./etc/hatchet_travis_setup.sh"
+before_install: bash etc/travis-setup.sh
 install: true
 script: eval "$TEST_CMD"
 after_script: heroku keys:remove $USER@`hostname`
