Update travis config and tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: clojure
-dist: trusty
+dist: xenial
 sudo: true
 branches:
   only:
   - master
-before_install: bash etc/ci-setup.sh
+before_install:
+  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6B05F25D762E3157
+  - sudo apt-get update
+  - bash etc/ci-setup.sh
 install: true
 script: eval "$TEST_CMD"
 after_script: heroku keys:remove $USER@`hostname`
