--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,4 +78,4 @@ workflows:
       - hatchet:
           matrix:
             parameters:
-              heroku-stack: ["cedar-14", "heroku-16", "heroku-18"]
+              heroku-stack: ["cedar-14", "heroku-16", "heroku-18", "heroku-20"]
