Update `publish.Ignore` list in buildpack.toml
Removes a non-existent entry and adds one that was missing.

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -6,10 +6,10 @@ name = "Clojure"
     "etc/",
     "spec/",
     "test/",
-    "vendor/",
     ".gitignore",
     ".github/",
     "hatchet.json",
+    "hatchet.lock",
     "Gemfile",
     "Gemfile.lock",
 ]
